<resources>
    <string name="app_name">Citofon</string>
    <string name="settings">Opciones</string>
    <string name="sync">Sincronizar</string>
    <string name="logo">Logo</string>
    <string name="titlePasswordSetting">Configuración del Sistema</string>
    <string name="messagePasswordSetting">A continuación ingrese la contraseña de administrador para configurar el equipo. Cualquier cambio erróneo en la configuración puede hacer que el equipo deje de funcionar de forma correcta.</string>
    <string name="errorPasswordSetting">La contraseña que ha ingresado es incorrecta. Favor ingresar nuevamente.</string>
    <string name="errorTitlePasswordSetting">Se ha producido un Error</string>
    <string name="retry">Reintentar</string>
    <string name="hint_password">Contraseña</string>
    <string name="textLogin">Seleccione su usuario e ingrese la contraseña correspondiente</string>
    <string name="login">Ingreso de Usuario</string>
    <string name="password">Cambiar Contraseña</string>
    <string name="showPassword">Cambiar Contraseña</string>
    <string name="passwordText">Ingrese su nueva contraseña y repita el procedimiento donde se le indique para poder realizar el cambio solicitado</string>
    <string name="passwordAlert">Las contraseñas no coinciden, vuelva a ingresarlas correctamente</string>
    <string name="passwordAlert2">La contraseña tiene que tener al menos 6 caracteres</string>
    <string name="prevPassword">Ingrese la nueva contraseña</string>
    <string name="prevRepPassword">Ingrese nuevamente la nueva contraseña</string>
    <string name="porterPassword">Contraseña de Conserjes desde la Tablet</string>
    <string name="pref_general_conf">Configuración Edificio</string>
    <string name="pref_general_parking">Configuración Estacionamiento</string>
    <string name="pref_general_parcels">Configuración Encomiendas</string>
    <string name="pref_general_visits">Configuración Visitas</string>
    <string name="pref_general_residents">Configuración Residentes</string>
    <string name="pref_apikey_label">API-KEY</string>
    <string name="pref_apikey_key" translatable="false">api-key</string>
    <string name="pref_id_building_label">ID Building</string>
    <string name="pref_id_building_key" translatable="false">id_building</string>
    <string name="pref_id_gateway_label">ID Gateway</string>
    <string name="pref_id_gateway_key" translatable="false">id_gateway</string>
    <string name="pref_id_parking_label">Estacionamientos (Ej: 1,2,3,&#8230;)</string>
    <string name="pref_id_parking_key" translatable="false">parking</string>
    <string name="pref_id_automatic_fine_label">Multar al Marcar Salida</string>
    <string name="pref_id_automatic_fine_key" translatable="false">automatic_fine</string>
    <string name="pref_id_max_time_parking_label">Máximo Horas Estacionamiento (0 Desactivado)</string>
    <string name="pref_id_max_time_parking_key">max_hours_parking</string>
    <string name="pref_id_reserved_parking_vehicle_label">Lugar reservado</string>
    <string name="pref_id_reserved_parking_vehicle_key">reserved_place</string>
    <string name="pref_id_mark_exit_label">Se marca la salida de vehículos</string>
    <string name="pref_id_mark_exit_key">mark_exit</string>
    <string name="pref_id_info_exit_parcel_label">Se registra datos quién retira encomienda</string>
    <string name="pref_id_info_exit_parcel_key">info_exit_parcel</string>
    <string name="pref_id_URL_label">URL WebServices</string>
    <string name="pref_id_URL_key">url_base</string>
    <string name="pref_id_URL_ANPR_label">URL ANPR Services</string>
    <string name="pref_id_URL_ANPR_key">url_anpr_base</string>
    <string name="pref_send_email_visits_label">Notificar Visitas por email</string>
    <string name="pref_send_email_visits_key">send_email_visits</string>
    <string name="pref_allow_phonecall_label">Permitir Llamados</string>
    <string name="pref_allow_phonecall_key">allow_phonecall</string>
    <string name="pref_OPTIONAL_FILED_VISITS_label">Visitas Campo Opcional</string>
    <string name="pref_OPTIONAL_FILED_VISITS_key">optional_field_visits</string>
    <string name="pref_manage_resident_label">Permitir Administrar Residentes</string>
    <string name="pref_manage_resident_key">allow_manage_residentes</string>
    <string name="pref_facialaccess_resident_label">Permitir Acceso Terminal Facial</string>
    <string name="pref_facialaccess_resident_key">allow_facialaccess_residentes</string>
    <string name="pref_ips_facialterminal_label">IP terminales faciales (separadas por ;)</string>
    <string name="pref_ips_facialterminal_key">ips_facialterminals</string>
    <string name="pref_send_email_fine_label">Notificar Multas por email</string>
    <string name="pref_send_email_fine_key">send_email_fine</string>
    <string name="pref_send_email_alert_label">Notificar Alertas de multas por email</string>
    <string name="pref_send_email_alert_key">send_email_alert</string>
    <string name="pref_automatic_fine_label">Multas automáticas</string>
    <string name="pref_automatic_fine_key">automatic_fine_alert</string>
    <string name="pref_send_email_field_label">Email CC (Ej: email1,email2,&#8230;)</string>
    <string name="pref_send_email_field_key">emails_cc_fine_alert</string>
    <string name="pref_id_time_delay_parking_label">Tiempo antes de cursar multas en minutos</string>
    <string name="pref_id_time_delay_parking_key">delay_hours_parking</string>
    <string name="pref_automatic_plate_detection_label">Detección automáticas de patentes</string>
    <string name="pref_automatic_plate_detection_key">automatic_plate_detection</string>
    <string name="pref_max_plates_images_label">N° max Imágenes</string>
    <string name="pref_max_plates_images_key">n_max_plates_images</string>
    <string name="pref_ips_cameras_label">IP cámaras (separadas por ;)</string>
    <string name="pref_ips_cameras_key">ips_cameras</string>
    <string name="sync_account_type">handsriver.com</string>
    <string name="content_authority_apartments">com.handsriver.concierge.apartments</string>
    <string name="content_authority_parceltype">com.handsriver.concierge.parceltype</string>
    <string name="content_authority_porters">com.handsriver.concierge.porters</string>
    <string name="content_authority_porters_tablet">com.handsriver.concierge.porters.tablet</string>
    <string name="content_authority_residents">com.handsriver.concierge.residents</string>
    <string name="content_authority_residents_tablet">com.handsriver.concierge.residents.tablet</string>
    <string name="content_authority_residentstemps">com.handsriver.concierge.residentstemps</string>
    <string name="content_authority_residentstemps_tablet">com.handsriver.concierge.residentstemps.tablet</string>
    <string name="content_authority_residentsvehicles">com.handsriver.concierge.residentsvehicles</string>
    <string name="content_authority_residentsvehicles_tablet">com.handsriver.concierge.residentsvehicles.tablet</string>
    <string name="content_authority_blacklist">com.handsriver.concierge.blacklist</string>
    <string name="content_authority_whitelist">com.handsriver.concierge.whitelist</string>
    <string name="content_authority_suppliers">com.handsriver.concierge.suppliers</string>
    <string name="content_authority_commonspaces">com.handsriver.concierge.commonspaces</string>
    <string name="content_authority_visits_vehicles">com.handsriver.concierge.visitsvehicles</string>
    <string name="content_authority_visits_vehicles_delete">com.handsriver.concierge.visitsvehicles.delete</string>
    <string name="content_authority_parcels">com.handsriver.concierge.parcels</string>
    <string name="content_authority_parcels_delete">com.handsriver.concierge.parcels.delete</string>
    <string name="content_authority_payments">com.handsriver.concierge.payments</string>
    <string name="content_authority_payments_delete">com.handsriver.concierge.payments.delete</string>
    <string name="content_authority_parkings">com.handsriver.concierge.parkings</string>
    <string name="content_authority_warehouses">com.handsriver.concierge.warehouses</string>
    <string name="content_authority_timekeeping">com.handsriver.concierge.timekeeping</string>
    <string name="content_authority_timekeeping_delete">com.handsriver.concierge.timekeeping.delete</string>
    <string name="content_authority_visits_suppliers">com.handsriver.concierge.visitssuppliers</string>
    <string name="content_authority_visits_commonspaces">com.handsriver.concierge.visitscommonspaces</string>
    <string name="content_authority_visits_others_gateways">com.handsriver.concierge.visits.othersgateways</string>
    <string name="content_authority_timekeeping_others_gateways">com.handsriver.concierge.timekeeping.othersgateways</string>
    <string name="content_authority_timekeeping_exit_others_gateways">com.handsriver.concierge.timekeeping.exitothersgateways</string>
    <string name="content_authority_visits_suppliers_others_gateways">com.handsriver.concierge.visitssuppliers.othersgateways</string>
    <string name="content_authority_visits_suppliers_exit_others_gateways">com.handsriver.concierge.visitssuppliers.exitothersgateways</string>
    <string name="content_authority_visits_commonspaces_others_gateways">com.handsriver.concierge.visitscommonspaces.othersgateways</string>
    <string name="content_authority_visits_commonspaces_exit_others_gateways">com.handsriver.concierge.visitscommonspaces.exitothersgateways</string>
    <string name="home">Inicio</string>
    <string name="visits">Visitas</string>
    <string name="visits_register">Registar Visitas</string>
    <string name="visits_search">Buscar Visitas</string>
    <string name="entryList">Entrada:\u0020</string>
    <string name="vehicles">Vehículos</string>
    <string name="vehicleList">Patente:\u0020</string>
    <string name="titleDetailVehicle">Detalle de Vehículo</string>
    <string name="parkingNumberList">Estacionamiento:\u0020</string>
    <string name="exitDateList">Salida:\u0020</string>
    <string name="fineDateList">Multa:\u0020</string>
    <string name="markExitVehicle">Salida</string>
    <string name="markFineVehicle">Multar</string>
    <string name="vehicles_search">Buscar Vehículo</string>
    <string name="parcels">Encomiendas</string>
    <string name="parcels_register">Registrar Encomienda</string>
    <string name="parcels_search">Buscar Encomienda</string>
    <string name="suppliers">Proveedores</string>
    <string name="suppliers_register">Registrar Proveedor</string>
    <string name="suppliers_search">Buscar Proveedor</string>
    <string name="commonspaces">Espacios Comunes</string>
    <string name="commonspacesvisits_register">Registrar Visita E.C.</string>
    <string name="commonspacesvisits_name">Nombre:</string>
    <string name="commonspacesvisits_documentnomber">Documento:</string>
    <string name="commonspacesvisits_search">Buscar Visita E.C.</string>
    <string name="nameCommonspaceList">Espacio Común:</string>
    <string name="timekeeping">Reloj Control</string>
    <string name="entry_porter">Registrar Entrada</string>
    <string name="exit_porter">Registrar Salida</string>
    <string name="search_entry_exit">Buscar Entrada/Salida</string>
    <string name="exit">Salir</string>
    <string name="apartmentList">Departamento:\u0020</string>
    <string name="residents">Residentes</string>
    <string name="registerResident">Registrar Residentes</string>
    <string name="searchResident">Buscar Residentes</string>
    <string name="searchParking">Buscar Estacionamiento</string>
    <string name="searchWarehouse">Buscar Bodega</string>
    <string name="payments">Pagos</string>
    <string name="paymentsRegister">Registrar Pago</string>
    <string name="searchPayments">Buscar Pagos</string>
</resources>