<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:checked="true"
        android:checkable="true"/>
    <group
        android:id="@+id/groupVisits">
        <item android:id="@+id/action_visits"
            android:title="@string/visits">
            <menu>
                <item
                    android:id="@+id/register_visits"
                    android:icon="@drawable/ic_visits"
                    android:title="@string/visits_register"
                    android:checkable="true"/>
                <item
                    android:id="@+id/search_visits"
                    android:icon="@drawable/ic_search"
                    android:title="@string/visits_search"
                    android:checkable="true"/>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/groupVehicles">
        <item
            android:id="@+id/action_vehicles"
            android:title="@string/vehicles">
            <menu>
                <item
                    android:id="@+id/search_vehicles"
                    android:icon="@drawable/ic_vehicles"
                    android:title="@string/vehicles_search"
                    android:checkable="true"/>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/groupParcels">
        <item
            android:id="@+id/action_parcels"
            android:title="@string/parcels">
            <menu>
                <item
                    android:id="@+id/register_parcels"
                    android:icon="@drawable/ic_parcels"
                    android:title="@string/parcels_register"
                    android:checkable="true"/>
                <item
                    android:id="@+id/search_parcels"
                    android:icon="@drawable/ic_search"
                    android:title="@string/parcels_search"
                    android:checkable="true"/>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/groupSuppliers">
        <item
            android:id="@+id/action_suppliers"
            android:title="@string/suppliers">
            <menu>
                <item
                    android:id="@+id/register_suppliers"
                    android:icon="@drawable/ic_suppliers"
                    android:title="@string/suppliers_register"
                    android:checkable="true"/>
                <item
                    android:id="@+id/search_suppliers"
                    android:icon="@drawable/ic_search"
                    android:title="@string/suppliers_search"
                    android:checkable="true"/>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/groupCommonspaces">
        <item
            android:id="@+id/action_commonspaces"
            android:title="@string/commonspaces">
            <menu>
                <item
                    android:id="@+id/register_visitscommonspaces"
                    android:icon="@drawable/ic_commonspaces"
                    android:title="@string/commonspacesvisits_register"
                    android:checkable="true"/>
                <item
                    android:id="@+id/search_commonspacesvisits"
                    android:icon="@drawable/ic_search"
                    android:title="@string/commonspacesvisits_search"
                    android:checkable="true"/>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/groupTimekeeping">
        <item
            android:id="@+id/action_timekeeping"
            android:title="@string/timekeeping">
            <menu>
                <item
                    android:id="@+id/entryPorter"
                    android:title="@string/entry_porter"
                    android:icon="@drawable/ic_timekeeping"
                    android:checkable="true"/>
                <item
                    android:id="@+id/exitPorter"
                    android:title="@string/exit_porter"
                    android:icon="@drawable/ic_timekeeping"
                    android:checkable="true"/>
                <item
                    android:id="@+id/searchEntryExit"
                    android:title="@string/search_entry_exit"
                    android:icon="@drawable/ic_search"
                    android:checkable="true"/>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/groupResidents">
        <item
            android:id="@+id/action_residents"
            android:title="@string/residents">
            <menu>
                <item
                    android:id="@+id/registerResidents"
                    android:title="@string/registerResident"
                    android:icon="@drawable/ic_group"
                    android:checkable="true"/>
                <item
                    android:id="@+id/searchResidents"
                    android:title="@string/searchResident"
                    android:icon="@drawable/ic_search"
                    android:checkable="true"/>
                <item
                    android:id="@+id/searchParking"
                    android:title="@string/searchParking"
                    android:icon="@drawable/ic_search"
                    android:checkable="true"/>
                <item
                    android:id="@+id/searchWarehouse"
                    android:title="@string/searchWarehouse"
                    android:icon="@drawable/ic_search"
                    android:checkable="true"/>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/groupPayments">
        <item
            android:id="@+id/action_payments"
            android:title="@string/payments">
            <menu>
                <item
                    android:id="@+id/paymentsRegister"
                    android:title="@string/paymentsRegister"
                    android:icon="@drawable/ic_money"
                    android:checkable="true"/>
                <item
                    android:id="@+id/searchPayments"
                    android:title="@string/searchPayments"
                    android:icon="@drawable/ic_search"
                    android:checkable="true"/>

            </menu>
        </item>
    </group>
    <group
        android:id="@+id/groupExit">
        <item
            android:id="@+id/action_change_password"
            android:title="@string/password"
            android:icon="@drawable/ic_password"
            android:enabled="true"/>
        <item
            android:id="@+id/action_exit"
            android:title="@string/exit"
            android:icon="@drawable/ic_exit"
            android:enabled="true"/>
    </group>
</menu>