<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/pref_manage_resident_label"
            android:key="@string/pref_manage_resident_key"
            android:disableDependentsState="true"/>

        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/pref_facialaccess_resident_label"
            android:key="@string/pref_facialaccess_resident_key"
            android:disableDependentsState="true"/>

        <EditTextPreference
            android:title="@string/pref_ips_facialterminal_label"
            android:key="@string/pref_ips_facialterminal_key"
            android:inputType="text"
            android:singleLine="true" />


</PreferenceScreen>