<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/titleDetailVehicle"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:background="?android:attr/dividerVertical" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="10dp"
        >
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entryList"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/textViewDetailEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicleList"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/textViewDetailLicensePlate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parkingNumberList"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/textViewDetailParkingNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exitDateList"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/textViewDetailExitDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fineDateList"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/textViewDetailFineDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apartmentList"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/textViewDetailApartmentNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/visitButtonListLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:gravity="end">

        <Button
            android:id="@+id/buttonFineVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/markFineVehicle"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/buttonExitVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/markExitVehicle"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

</LinearLayout>