<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center_vertical"
        android:stretchColumns="1"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entryList"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textViewEntryListCommonspacevisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commonspacesvisits_name"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textViewCommonspacevisitList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commonspacesvisits_documentnomber"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textViewDocumentCommonspacevisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameCommonspaceList"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textViewCommonspaceList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apartmentList"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textViewApartmentListCommonspacevisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </TableRow>
</TableLayout>
